# eternity

./: .gitignore  CMakeLists.txt
Source/Autogenerated/: MetaData.cpp
Source/Editor/: Editor.pro  Makefile  entitytreemodel.cpp  entitytreemodel.h  eternityopenglwidget.cpp  eternityopenglwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  moc_openscenedialog.cpp  moc_treemodel.cpp  openscenedialog.cpp  openscenedialog.h  openscenedialog.ui  propertycheckbox.cpp  propertycheckbox.h  sceneentitytreeview.cpp  sceneentitytreeview.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h  ui_mainwindow.h  ui_openscenedialog.h
Source/Engine/: eternity.h
Source/Engine/Core/: Application.cpp  Application.h  Component.cpp  Component.h  ComponentSystem.cpp  ComponentSystem.h  DataObject.h  DataRecord.cpp  DataRecord.h  DataRecordType.cpp  DataRecordType.h  Entity.cpp  Entity.h  Error.cpp  Error.h  GigaObject.cpp  GigaObject.h  MathTypes.h  Message.cpp  Message.h  MessageSystem.cpp  MessageSystem.h  MetaSystem.cpp  MetaSystem.h  Quaternion.h  Scene.cpp  Scene.h  Service.h  System.h  TimeSystem.cpp  TimeSystem.h  Timer.cpp  Timer.h  Transform.cpp  Transform.h  TransformComponent.cpp  TransformComponent.h  Variant.cpp  Variant.h  VariantRef.cpp  (+6 more)
Source/Engine/IO/: Command.cpp  Command.h  DataLoader.cpp  DataLoader.h  Directory.cpp  Directory.h  InputDevice.cpp  InputDevice.h  InputSystem.cpp  InputSystem.h  Keyboard.cpp  Keyboard.h  MemoryReader.cpp  MemoryReader.h  MemoryWriter.cpp  MemoryWriter.h  Resource.cpp  Resource.h  ResourceObject.cpp  ResourceObject.h  ResourceSystem.cpp  ResourceSystem.h  SQLiteDataLoader.cpp  SQLiteDataLoader.h  Serializer.cpp  Serializer.h
Source/Engine/Network/: EntitySnapshot.cpp  EntitySnapshot.h  HttpRequest.cpp  HttpRequest.h  NetworkMessage.cpp  NetworkMessage.h  NetworkMessagePart.cpp  NetworkMessagePart.h  NetworkSession.cpp  NetworkSession.h  NetworkSystem.cpp  NetworkSystem.h  NetworkSystemInfo.h  ReplicationSystem.cpp  ReplicationSystem.h  UDPSocket.h  UDPSocketBase.h  UDPSocketPosix.cpp  UDPSocketPosix.h  UDPSocketWin32.cpp  UDPSocketWin32.h
Source/Engine/Network/Messages/: AckMessage.cpp  AckMessage.h  CommandMessage.cpp  CommandMessage.h  EchoRequestMessage.cpp  EchoRequestMessage.h  EchoResponseMessage.cpp  EchoResponseMessage.h  EntitySnapshotMessage.cpp  EntitySnapshotMessage.h  HelloMessage.cpp  HelloMessage.h  NetworkMessageTypes.h  ResendPartialMessage.cpp  ResendPartialMessage.h
Source/Engine/Physics/: BoxCollisionComponent.cpp  BoxCollisionComponent.h  BoxCollisionShape.cpp  BoxCollisionShape.h  CapsuleCollisionShape.cpp  CapsuleCollisionShape.h  CollisionShape.cpp  CollisionShape.h  MeshCollisionComponent.cpp  MeshCollisionComponent.h  MeshCollisionShape.cpp  MeshCollisionShape.h  PhysicsCollision.cpp  PhysicsCollision.h  PhysicsDebugRenderer.cpp  PhysicsDebugRenderer.h  PhysicsSystem.cpp  PhysicsSystem.h  RigidBodyComponent.cpp  RigidBodyComponent.h
Source/Engine/Render/: Animation.h  AnimationFrame.h  AnimationTransform.h  ArcballCameraComponent.cpp  ArcballCameraComponent.h  Bone.h  BoundingBox.cpp  BoundingBox.h  CameraComponent.cpp  CameraComponent.h  Color.h  DebugRenderSystem.cpp  DebugRenderSystem.h  Defines.h  DepthPass.cpp  DepthPass.h  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  LightComponent.cpp  LightComponent.h  Material.h  MaterialSystem.cpp  MaterialSystem.h  Mesh.cpp  Mesh.h  MeshComponent.cpp  MeshComponent.h  PointLightComponent.cpp  PointLightComponent.h  RenderComponent.cpp  RenderComponent.h  RenderPass.cpp  RenderPass.h  RenderSystem.cpp  RenderSystem.h  RenderWindow.cpp  RenderWindow.h  Scene.cpp  (+22 more)
Source/Engine/Render/DeferredRenderer/: CombinePass.cpp  CombinePass.h  GBuffer.cpp  GBuffer.h  LightingPass.cpp  LightingPass.h  TerrainPass.cpp  TerrainPass.h
Source/Engine/Render/OpenGL/: OpenGL.h  OpenGLColor.cpp  OpenGLDeferredRenderPass.cpp  OpenGLDeferredRenderPass.h  OpenGLDefines.cpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRenderSystem.cpp  OpenGLRenderSystem.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  OpenGLTexture.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLTexture3D.cpp  OpenGLTexture3D.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h  OpenGLVertexType.cpp  OpenGLVertexType.h
Source/Engine/Scripting/: Script.h  ScriptCallbackHandler.cpp  ScriptCallbackHandler.h  ScriptCallbackImpl.cpp  ScriptCallbackImpl.h  ScriptComponent.cpp  ScriptComponent.h  ScriptObject.h  ScriptObjectImpl.cpp  ScriptObjectImpl.h  ScriptThread.cpp  ScriptThread.h  ScriptVariant.cpp  ScriptVariant.h  ScriptingSystem.cpp  ScriptingSystem.h
Source/Engine/Scripting/Types/: Vector3.h
Source/Game/: main.cpp
Source/Generator/: Defines.h  Directory.cpp  Directory.h  MetaClass.h  main.cpp
Source/Server/: main.cpp
Source/Workspace/: eternity.sln
Source/Workspace/Engine/: eternity.vcxproj  eternity.vcxproj.filters
Source/Workspace/Engine/eternity.xcodeproj/: project.pbxproj
Source/Workspace/Engine/eternity.xcodeproj/project.xcworkspace/xcuserdata/terryjsmith.xcuserdatad/: UserInterfaceState.xcuserstate
Source/Workspace/Engine/eternity.xcodeproj/xcuserdata/terryjsmith.xcuserdatad/xcschemes/: xcschememanagement.plist
Source/Workspace/Game/: game.vcxproj  game.vcxproj.filters
Source/Workspace/Generator/: generator.vcxproj  generator.vcxproj.filters
Source/Workspace/Generator/generator.xcodeproj/: project.pbxproj
Source/Workspace/eternity.xcworkspace/: contents.xcworkspacedata
Source/Workspace/eternity.xcworkspace/xcuserdata/terryjsmith.xcuserdatad/: UserInterfaceState.xcuserstate
Source/Workspace/eternity.xcworkspace/xcuserdata/terryjsmith.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Source/Workspace/eternity/eternity.xcodeproj/: project.pbxproj
Source/Workspace/eternity/eternity.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Source/Workspace/game/game.xcodeproj/: project.pbxproj
generator/generator/: main.cpp
generator/generator.xcodeproj/: project.pbxproj
(+6 files in other folders)
